bk_ida/bzip2ida/c2/snocString
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/snocString/src/bzip2.c:2343:5: error: assigning to 'Cell' (aka 'struct zzzz') from incompatible type 'long long'
*v9 = 0LL; 
    ^ ~~~
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/snocString/src/bzip2.c:2368:12: error: expected expression
*( _OWORD *)v5 = 0LL; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/snocString/src/bzip2.c:2368:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)v5 = 0LL; 
   ^
3 errors generated.
make: *** [/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/snocString/src/obj/bzip2.o] Error 1
